5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1573_2896.log
== TEST (2019-03-31 21:23:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:24:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print()
-- EXECUTION TIME:
0.150687
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:25:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")


# Impressao de saidas print(var)
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:26:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print()
-- EXECUTION TIME:
0.151385
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:28:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")
hhh

# Impressao de saidas print(var)
print()
-- EXECUTION TIME:
0.199293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 5, in <module>
    hhh
NameError: name 'hhh' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:29:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")
input().
# Impressao de saidas print(var)
print()
-- ERROR:
File "XXXX", line 5
    input().
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:29:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")
input().
# Impressao de saidas print(var)
print()
-- EXECUTION TIME:
0.208779
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 5
    input().
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:29:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")
input().
# Impressao de saidas print(var)
print()
-- EXECUTION TIME:
0.20976
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 5
    input().
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:51:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print("BOOMERANG")
-- OUTPUT:
BOOMERANG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:51:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print("BOOMERANG")
-- EXECUTION TIME:
0.134654
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:51:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print(var)
print(BOOMERANG)
-- EXECUTION TIME:
0.187383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(BOOMERANG)
NameError: name 'BOOMERANG' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:52:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG:")

# Impressao de saidas print(var)
print(BOOMERANG)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(BOOMERANG)
NameError: name 'BOOMERANG' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:52:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("BOOMERANG:")

# Impressao de saidas print(var)
print(BOOMERANG)
-- EXECUTION TIME:
0.190208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(BOOMERANG)
NameError: name 'BOOMERANG' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
